feat: add Futura Book & Demi fonts

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,9 +1,10 @@
+@import 'fonts'
 @import 'normalize'
 @import 'variables'
-@import '_interface'
+@import 'interface'
 @import 'grid'
 @import 'templates/header'
 
 body
-  font-family: sans-serif
+  font-family: 'Futura Book', sans-serif
   font-size: 14px
