--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -6,3 +6,8 @@
   &_primary
     background-color: $primary
     color: $light
+  &_outline
+    border: 1px solid $light
+    background-color: transparent
+    color: $light
+
