--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -1,15 +1,41 @@
 .hero
   position: relative
+  display: flex
+  flex-direction: column
+  justify-content: center
   padding-top: 100px
   background: $dark url('../img/hero-bg.jpg') no-repeat center / cover
   height: 100vh
   color: $light
+  &__content
+    max-width: 670px
+  &__text
+    font-size: 22px  
+    max-width: 500px
+  &__button
+    margin-right: 20px
+    
   &__instagram
     position: absolute
     left: 0
     top: 0
     max-width: 80px
     height: 100%
+  &__scroll-down
+    position: absolute
+    display: flex
+    justify-content: center
+    align-items: center
+    left: 0
+    bottom: 0
+    min-width: 247px
+    min-height: 97px
+    background-color: $dark
+    text-transform: uppercase
+    color: $light
+    text-decoration: none
+
+
 
 .instagram
   display: flex
@@ -24,3 +50,9 @@
 
 .title
   margin: 0
+  font-family: 'Yeseva One', cursive;
+  text-transform: uppercase
+  font-size: 40px
+
+  &_primary
+    color: $primary
