--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -3,9 +3,17 @@
   border: none
   border-radius: 2px
   text-transform: uppercase
+  &:hover
+    cursor: pointer
+
   &_primary
     background-color: $primary
     color: $light
+    box-shadow: 0px 5px 15px rgba($primary, 0.2)
+    transition: box-shadow 0.3s
+    &:hover
+      box-shadow: none
+
   &_outline
     border: 1px solid $light
     background-color: transparent
