--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -7,7 +7,15 @@
   background: $dark url('../img/hero-bg.jpg') no-repeat center / cover
   height: 100vh
   color: $light
+  &::before
+    content: ''
+    position: absolute
+    width: 100%
+    height: 100%
+    background-color: rgba($dark, 0.7)
+
   &__content
+    position: relative
     max-width: 670px
   &__text
     font-size: 22px  
@@ -31,9 +39,22 @@
     min-width: 247px
     min-height: 97px
     background-color: $dark
+    font-family: Yeseva One;
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 138.6%
     text-transform: uppercase
     color: $light
     text-decoration: none
+    &::after
+      content: ''
+      background: url('../img/arrow-down.svg') no-repeat center
+      width: 30px
+      height: 30px
+      border: 2px solid $primary
+      border-radius: 50%
+      margin-left: 12px
 
 
 
@@ -43,10 +64,19 @@
   align-items: center
   background-color: $dark
   &__link
+    display: flex
+    align-items: center
     text-transform: uppercase
     text-decoration: none
     color: $primary
     transform: rotate(90deg)
+    line-height: 0.8
+    &::after
+      content: ''
+      width: 50px
+      height: 1px
+      background-color: $primary
+      margin-left: 8px
 
 .title
   margin: 0
