refact: make responsive layout for header and hero

--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -18,9 +18,10 @@
 
   &__content
     position: relative
-    max-width: 670px
+    max-width: 47.85rem
+    margin-left: 4.28rem
   &__text
-    font-size: 22px  
+    font-size: 1.57rem  
     max-width: 500px
   &__button
     margin-right: 20px
@@ -38,8 +39,8 @@
     align-items: center
     left: 0
     bottom: 0
-    min-width: 247px
-    min-height: 97px
+    min-width: 17.6rem
+    min-height: 6.92rem
     background-color: $dark
     font-family: Yeseva One;
     font-style: normal
@@ -57,8 +58,6 @@
       border: 2px solid $primary
       border-radius: 50%
       margin-left: 12px
-
-
 
 .instagram
   display: flex
@@ -84,7 +83,7 @@
   margin: 0
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase
-  font-size: 40px
+  font-size: 2.857rem
 
   &_primary
     color: $primary
