pixel perfect adjustments

--- a/css/style.css
+++ b/css/style.css
@@ -320,7 +320,7 @@ template {
   display: none; }
 
 .button {
-  padding: 13px 20px;
+  padding: 11px 24px;
   border: none;
   border-radius: 2px;
   text-transform: uppercase;
@@ -384,6 +384,7 @@ body {
   align-items: center; }
 
 .logo {
+  font-size: 1.075rem;
   color: #E3B873;
   text-transform: uppercase; }
 
@@ -391,7 +392,7 @@ body {
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
-  margin-right: 2.85rem;
+  margin-right: 2.65rem;
   transition: color 0.2s; }
   .nav__item:hover {
     color: #E3B873; }
@@ -423,11 +424,17 @@ body {
     position: relative;
     max-width: 47.85rem;
     margin-left: 4.28rem; }
+  .hero__title {
+    margin-bottom: 1rem; }
   .hero__text {
     font-size: 1.57rem;
-    max-width: 500px; }
+    line-height: 130%;
+    max-width: 500px;
+    margin: 0;
+    margin-bottom: 3rem; }
   .hero__button {
-    margin-right: 20px; }
+    margin-right: 20px;
+    padding: 20px 28px; }
   .hero__instagram {
     position: absolute;
     left: 0;
@@ -446,7 +453,7 @@ body {
     background-color: #131313;
     font-family: Yeseva One;
     font-style: normal;
-    font-weight: normal;
+    font-weight: 300;
     font-size: 12px;
     line-height: 138.6%;
     text-transform: uppercase;
@@ -473,7 +480,8 @@ body {
     text-decoration: none;
     color: #E3B873;
     transform: rotate(90deg);
-    line-height: 0.8; }
+    line-height: 0.8;
+    font-size: 1.1rem; }
     .instagram__link::after {
       content: '';
       width: 50px;
@@ -482,10 +490,11 @@ body {
       margin-left: 8px; }
 
 .title {
-  margin: 0;
   font-family: 'Yeseva One', cursive;
+  font-weight: 300;
   text-transform: uppercase;
-  font-size: 2.857rem; }
+  font-size: 2.857rem;
+  line-height: 1.4; }
   .title_primary {
     color: #E3B873; }
 
