--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -4,8 +4,6 @@
   top: 0
   width: 100%
   z-index: 99
-
-
   background-color: $dark
   padding: 24px 0
 .menu
@@ -14,6 +12,7 @@
   align-items: center
 
 .logo
+  font-size: 1.075rem
   color: $primary
   text-transform: uppercase
 
@@ -22,7 +21,7 @@
     color: $light
     text-decoration: none
     text-transform: uppercase
-    margin-right: 2.85rem
+    margin-right: 2.65rem
     transition: color 0.2s
     &:hover
       color: $primary
