--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -20,12 +20,17 @@
     position: relative
     max-width: 47.85rem
     margin-left: 4.28rem
+  &__title
+    margin-bottom: 1rem 
   &__text
     font-size: 1.57rem  
+    line-height: 130%
     max-width: 500px
+    margin: 0
+    margin-bottom: 3rem
   &__button
     margin-right: 20px
-    
+    padding: 20px 28px
   &__instagram
     position: absolute
     left: 0
@@ -44,7 +49,7 @@
     background-color: $dark
     font-family: Yeseva One;
     font-style: normal
-    font-weight: normal
+    font-weight: 300
     font-size: 12px
     line-height: 138.6%
     text-transform: uppercase
@@ -72,6 +77,7 @@
     color: $primary
     transform: rotate(90deg)
     line-height: 0.8
+    font-size: 1.1rem
     &::after
       content: ''
       width: 50px
@@ -80,10 +86,12 @@
       margin-left: 8px
 
 .title
-  margin: 0
+  //margin: 0
   font-family: 'Yeseva One', cursive;
+  font-weight: 300
   text-transform: uppercase
   font-size: 2.857rem
+  line-height: 1.4
 
   &_primary
     color: $primary
