added section -types of renovation-

--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -47,7 +47,7 @@
     min-width: 17.6rem
     min-height: 6.92rem
     background-color: $dark
-    font-family: Yeseva One;
+    font-family: 'Yeseva One'
     font-style: normal
     font-weight: 300
     font-size: 12px
