--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -14,6 +14,23 @@
     &__content
       margin-left: 0
 
+@media screen and ( max-width: 760px )
+  .row
+    flex-direction: column
+    align-items: center
+  .types
+    &__card
+      margin-bottom: 5rem
+  .card
+    &__text
+      margin-left: 0
+  .design
+    background-color: $dark
+    &__section-title
+      color: $light
+    &__card
+      margin-bottom: 5.7rem      
+
 @media screen and ( max-width: 570px )
   .contacts
     &__phone
