added section -design-project-

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -15,8 +15,6 @@ img
   padding: 60px 0
   &-title
     text-align: center
-    text-transform: uppercase
-    font-family: 'Yeseva One', cursive
     &__image
       display: flex
       justify-content: center
@@ -27,3 +25,17 @@ img
         height: 2px
         background-color: $primary
         margin: 0 10px
+    &__heading
+      font-family: 'Yeseva One', cursive
+      text-transform: uppercase
+      font-weight: normal
+    &__text
+      width: 77%
+      margin: 25px auto 39px
+      font-family: 'Futura Book'
+      font-style: normal
+      font-weight: normal
+      font-size: 20px
+      line-height: 27px
+      text-align: center
+      color: $grey
