--- a/css/style.css
+++ b/css/style.css
@@ -360,9 +360,7 @@ img {
 .section {
   padding: 60px 0; }
   .section-title {
-    text-align: center;
-    text-transform: uppercase;
-    font-family: 'Yeseva One', cursive; }
+    text-align: center; }
     .section-title__image {
       display: flex;
       justify-content: center;
@@ -373,6 +371,20 @@ img {
         height: 2px;
         background-color: #E3B873;
         margin: 0 10px; }
+    .section-title__heading {
+      font-family: 'Yeseva One', cursive;
+      text-transform: uppercase;
+      font-weight: normal; }
+    .section-title__text {
+      width: 77%;
+      margin: 25px auto 39px;
+      font-family: 'Futura Book';
+      font-style: normal;
+      font-weight: normal;
+      font-size: 20px;
+      line-height: 27px;
+      text-align: center;
+      color: #363636; }
 
 .header {
   position: fixed;
@@ -526,6 +538,7 @@ img {
 .card__title {
   font-family: 'Yeseva One', cursive;
   font-size: 1.29rem;
+  font-weight: 300;
   margin-top: 0;
   margin-bottom: 0.7rem; }
 
@@ -548,21 +561,6 @@ img {
   background-color: #E3B873;
   color: #fff;
   padding: 1.214rem 2.6rem; }
-
-@media screen and (max-width: 760px) {
-  .row {
-    flex-direction: column;
-    align-items: center; }
-  .types__card {
-    margin-bottom: 5rem; }
-  .card__text {
-    margin-left: 0; }
-  .design {
-    background-color: #131313; }
-    .design__section-title {
-      color: #fff; }
-    .design__card {
-      margin-bottom: 5.7rem; } }
 
 @media screen and (max-width: 1200px) {
   html {
