--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -22,6 +22,7 @@
   &__title
     font-family: 'Yeseva One', cursive
     font-size: 1.29rem
+    font-weight: 300
     margin-top: 0
     margin-bottom: 0.7rem
   &__list
@@ -43,19 +44,3 @@
     color: $light
     padding: 1.214rem 2.6rem
 
-@media screen and ( max-width: 760px )
-  .row
-    flex-direction: column
-    align-items: center
-  .types
-    &__card
-      margin-bottom: 5rem
-  .card
-    &__text
-      margin-left: 0
-  .design
-    background-color: $dark
-    &__section-title
-      color: $light
-    &__card
-      margin-bottom: 5.7rem
