--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -20,4 +20,37 @@
     background-color: transparent
     color: $light
     
+.label
+  font-size: 1.07rem
+  &_light
+    color: rgba($light, 0.5)
 
+.input
+  background-color: transparent
+  border: none
+  border-bottom: 1px solid rgba(54, 54, 54, 0.3)
+  font-size: 1.285rem
+  color: $light
+  padding: 0.5rem 0
+  &::placeholder
+    color: $light
+.policy
+  &__checkbox
+    opacity: 0
+    visibility: hidden
+    &:checked +
+      .policy__label
+        &::before
+          background: $primary url('../img/check.svg') no-repeat center
+  &__label
+    display: flex
+    align-items: center
+    &::before
+      content: ''
+      width: 18px
+      height: 18px
+      border: 1px solid $primary
+      display: inline-block
+      border-radius: 1px
+      cursor: pointer
+      margin-right: 0.64rem
