feat: added js function for modal

--- a/css/style.css
+++ b/css/style.css
@@ -597,6 +597,8 @@ img {
   padding: 1.214rem 2.6rem; }
 
 .modal {
+  opacity: 0;
+  visibility: hidden;
   position: fixed;
   z-index: 199;
   left: 0;
@@ -609,6 +611,9 @@ img {
   display: flex;
   align-items: center;
   justify-content: center; }
+  .modal_visible {
+    opacity: 1;
+    visibility: visible; }
   .modal__dialog {
     position: relative;
     max-width: 36.36rem;
