--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -13,6 +13,8 @@
       display: none
     &__content
       margin-left: 0
+  .card__title
+    font-size: 1.05rem
 
 @media screen and ( max-width: 760px )
   .row
@@ -29,7 +31,15 @@
     &__section-title
       color: $light
     &__card
-      margin-bottom: 5.7rem      
+      margin-bottom: 5.7rem
+  .section
+    &_mobile-dark
+      background-color: $dark-mobile
+    &-title__heading
+      color: $light
+    &-title__text
+      color: $light
+          
 
 @media screen and ( max-width: 570px )
   .contacts
