--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -3,3 +3,13 @@
   max-width: 1256px
   margin: auto
   
+.row
+  display: flex
+  align-items: flex-start
+  justify-content: space-between
+
+.col
+  &-30
+    flex-basis: 30%
+  &-50
+    width: 50%
