saving before animation embedding

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -22,6 +22,8 @@ img
     
     &_left
       text-align: left
+    &_light
+      color: $light
     &__heading
       font-family: 'Yeseva One', cursive
       text-transform: uppercase
