--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -32,8 +32,9 @@
   font-size: 1.285rem
   color: $light
   padding: 0.5rem 0
-  &::placeholder
-    color: $light
+  &_light
+    &::placeholder
+      color: $light
 .policy
   &__checkbox
     opacity: 0
