--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -50,9 +50,21 @@ img
       font-size: 1.28rem
       line-height: 2.07rem
       max-width: 31.57rem
-      //text-align: center
       //color: $grey
  
+      //deviation from lesson
+      &_center
+        width: 77%
+        margin: 25px auto 39px
+        font-family: 'Futura Book'
+        font-style: normal
+        font-weight: normal
+        font-size: 1.28rem
+        line-height: 2.07rem
+        max-width: 31.57rem
+        //color: $grey
+        text-align: center
+
     &__image
       display: flex
       justify-content: center
