--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -46,6 +46,7 @@
   &__label
     display: flex
     align-items: center
+    font-size: 1.142rem
     &::before
       content: ''
       width: 18px
@@ -55,4 +56,5 @@
       border-radius: 1px
       cursor: pointer
       margin-right: 0.64rem
-      
+    &_center
+      justify-content: center
