--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,6 +9,7 @@
 @import 'templates/projects'
 @import 'templates/control'
 @import 'templates/types'
+@import 'templates/footer'
 @import 'templates/modal'
 
 @import 'media'
