--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -35,6 +35,20 @@
   &_light
     &::placeholder
       color: $light
+
+/*deviation from lesson - start*/
+.input-grey
+  background-color: transparent
+  border: none
+  border-bottom: 1px solid rgba(54, 54, 54, 0.3)
+  font-size: 1.285rem
+  color: $grey
+  padding: 0.5rem 0
+  &_light
+    &::placeholder
+      color: $light
+/*deviation from lesson - end*/
+
 .policy
   &__checkbox
     opacity: 0
@@ -58,3 +72,9 @@
       margin-right: 0.64rem
     &_center
       justify-content: center
+label
+  &.invalid
+    color: tomato
+input
+  &.invalid
+    border-bottom: 1px solid tomato
