--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -36,9 +36,14 @@
     &_mobile-dark
       background-color: $dark-mobile
     &-title__heading
-      color: $light
+      color: $primary
     &-title__text
       color: $light
+    &-title__word::after
+      display: none
+
+
+  
           
 
 @media screen and ( max-width: 570px )
@@ -63,6 +68,14 @@
       display: block
       min-width: 22.86rem        
       margin-bottom: 1.85rem
+  .footer
+    &__form
+      flex-direction: column
+    &__button
+      width: 100%
+  .policy__label_center
+    justify-content: left
+
 @media screen and ( max-height: 520px )
   .hero
     &__scroll-down
