--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -77,10 +77,57 @@
 label
   &.invalid
     color: tomato
-    
-    
+   
 input
   &.invalid
     border-bottom: 1px solid tomato
 
+#user-name-error 
+  position: absolute
+  left: 0
+  top: 4.5rem
   
+#user-phone-error
+  position: absolute
+  left: 0
+  top: 4.5rem
+
+#policycheckbox-error
+  position: absolute
+  left: 18.143rem
+  top: 4.2rem
+
+#user-name2-error 
+  position: absolute
+  left: 0
+  top: 3.9rem
+  
+#user-phone2-error
+  position: absolute
+  left: 0
+  top: 3.9rem
+
+#policycheckbox2-error
+  position: absolute
+  left: 9.214rem
+  top: 4.2rem
+
+#user-name3-error 
+  position: absolute
+  left: 0
+  top: 3.9rem
+  
+#user-phone3-error
+  position: absolute
+  left: 0
+  top: 3.9rem
+
+#user-email3-error
+  position: absolute
+  left: 0
+  top: 3.9rem
+
+#policycheckbox3-error
+  position: absolute
+  left: 0
+  top: 4.2rem
