--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -75,6 +75,9 @@
       width: 100%
   .policy__label_center
     justify-content: left
+  .address-contacts
+    width: 100%
+    min-width: unset   
 
 @media screen and ( max-height: 520px )
   .hero
