--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -40,14 +40,16 @@
     max-width: 55rem
     margin: auto
   &__input-group
+    position: relative
     display: flex
     flex-direction: column
     flex-basis: 30%
   &__label
-    margin-bottom: -7px
+    margin-bottom: 0.3rem
   &__button
     padding: 1.2857rem 4.785rem
   &__policy
+    position: relative
     flex-basis: 100%
     margin-top: 1.2rem
     &-label
