--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -25,6 +25,7 @@
   &__input
     padding-top: 0.3rem
     &-group
+      position: relative
       display: flex
       flex-direction: column
       flex-basis: 45%
@@ -33,6 +34,7 @@
         flex-basis: 100%
         margin-bottom: 2rem
   &__policy
+    position: relative
     flex-basis: 100%
     margin-bottom: 3.6rem
   &__button
@@ -45,6 +47,7 @@
     margin-bottom: 4rem
 .address-contacts
   width: 60%
+  min-width: 430px
   margin: auto
   text-align: center
 .address
