--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -43,12 +43,14 @@
     flex-direction: column
   &__input
     &-group
+      position: relative
       display: flex
       flex-direction: column
       margin-bottom: 3.428rem
     &:last-of-type
       margin-bottom: 1rem
   &__policy
+    position: relative
     margin-bottom: 2.7rem
   &__button
     align-self: flex-end
