--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -77,7 +77,9 @@
     justify-content: left
   .address-contacts
     width: 100%
-    min-width: unset   
+    min-width: unset
+  #policycheckbox2-error
+    left: 0 
 
 @media screen and ( max-height: 520px )
   .hero
