--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   /*format (woff) or format (woff2)?*/
   font-weight: normal;
   font-style: normal;
-  font-display: wrap; }
+  font-display: swap; }
 
 @font-face {
   font-family: 'Futura Demi';
@@ -12,7 +12,7 @@
   /*format (woff) or format (woff2)?*/
   font-weight: normal;
   font-style: normal;
-  font-display: wrap; }
+  font-display: swap; }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -90,6 +90,7 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
+  -webkit-text-decoration: underline dotted;
   text-decoration: underline dotted;
   /* 2 */ }
 
@@ -351,6 +352,12 @@ template {
   font-size: 1.285rem;
   color: #fff;
   padding: 0.5rem 0; }
+  .input_light::-moz-placeholder {
+    color: #fff; }
+  .input_light:-ms-input-placeholder {
+    color: #fff; }
+  .input_light::-ms-input-placeholder {
+    color: #fff; }
   .input_light::placeholder {
     color: #fff; }
 
@@ -362,6 +369,12 @@ template {
   font-size: 1.285rem;
   color: #363636;
   padding: 0.5rem 0; }
+  .input-grey_light::-moz-placeholder {
+    color: #fff; }
+  .input-grey_light:-ms-input-placeholder {
+    color: #fff; }
+  .input-grey_light::-ms-input-placeholder {
+    color: #fff; }
   .input-grey_light::placeholder {
     color: #fff; }
 
@@ -1020,6 +1033,12 @@ img {
     color: rgba(255, 255, 255, 0.5); }
   .input-grey {
     border-bottom: 1px solid #fff;
+    color: #fff; }
+  .input-grey::-moz-placeholder {
+    color: #fff; }
+  .input-grey:-ms-input-placeholder {
+    color: #fff; }
+  .input-grey::-ms-input-placeholder {
     color: #fff; }
   .input-grey::placeholder {
     color: #fff; }
