--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -5,7 +5,7 @@ url('../fonts/futura/FuturaBookC.woff') format('woff'),
 url('../fonts/futura/FuturaBookC.woff2') format('woff'); /*format (woff) or format (woff2)?*/
 font-weight: normal;
 font-style: normal;
-font-display: wrap;
+font-display: swap;
 }
 
 
@@ -16,6 +16,6 @@ url('../fonts/futura/FuturaDemiC.woff') format('woff'),
 url('../fonts/futura/FuturaDemiC.woff2') format('woff'); /*format (woff) or format (woff2)?*/
 font-weight: normal;
 font-style: normal;
-font-display: wrap;
+font-display: swap;
 }
 
