--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -18,6 +18,7 @@
       height: 100%
       background-color: rgba(black, 0.8)
   &__text
+    width: 90%
     max-width: 40.785rem
     margin: auto
     margin-bottom: 4.285rem
@@ -34,6 +35,7 @@
       background-color: $primary
       border-radius: 30px
   &__form
+    position: relative
     display: flex
     justify-content: space-between
     flex-wrap: wrap
@@ -47,7 +49,7 @@
   &__label
     margin-bottom: 0.3rem
   &__button
-    padding: 1.2857rem 4.785rem
+     padding: 1.2857rem 4.785rem
   &__policy
     position: relative
     flex-basis: 100%
@@ -58,3 +60,4 @@
   &__play
     position: relative
     margin: auto
+    cursor: pointer
