--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -10,11 +10,16 @@
   display: flex
   justify-content: space-between
   align-items: center
+  &__logo
+    text-decoration: none
+      
 
 .logo
   font-size: 1.075rem
   color: $primary
   text-transform: uppercase
+  &:hover
+    color: $light
 
 .nav
   &__item
@@ -32,4 +37,8 @@
 .contacts
   &__phone
     margin-right: 45px
+    line-height: 2.9rem
+    text-decoration: none
+    &:hover
+      color: $light
     
