--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -73,6 +73,8 @@
       border: 2px solid $primary
       border-radius: 50%
       margin-left: 12px
+    &:hover
+      color: $primary
 
 .instagram
   display: flex
@@ -94,6 +96,8 @@
       height: 1px
       background-color: $primary
       margin-left: 8px
+    &:hover
+      color: $light
 
 .title
   //margin: 0
