--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -12,7 +12,7 @@ img
   max-width: 100%
 
 .section
-  padding: 60px 0
+  padding: 4.285rem
   &_dark
     background-color: $dark
     color: $light
@@ -61,7 +61,7 @@ img
         font-weight: normal
         font-size: 1.28rem
         line-height: 2.07rem
-        max-width: 31.57rem
+        max-width: 47.57rem
         //color: $grey
         text-align: center
 
